Crash on abrupt window size changes with alternate screen app running
A regression from 910bc023, but happens regardless of the scroll-unit-as-pixels
value.
- Run vte-2.91
nano
- Maximize/tile/fullscreen/quickly resize the window
VTE:ERROR:../subprojects/vte/src/vteaccess.cc:630:void _vte_terminal_accessible_text_scrolled(VteTerminalAccessible*, long int): assertion failed: (i >= 1)
Bail out! VTE:ERROR:../subprojects/vte/src/vteaccess.cc:630:void _vte_terminal_accessible_text_scrolled(VteTerminalAccessible*, long int): assertion failed: (i >= 1)
#0 0x00007ffff6dd69d5 in raise () at /lib64/libc.so.6
#1 0x00007ffff6dbf8a4 in abort () at /lib64/libc.so.6
#2 0x00007ffff7be2b6c in g_assertion_message_expr.cold () at /lib64/libglib-2.0.so.0
#3 0x00007ffff7c3d3bf in g_assertion_message_expr () at /lib64/libglib-2.0.so.0
#4 0x00007ffff7f77316 in _vte_terminal_accessible_text_scrolled () at /lib64/libvte-2.91.so.0
#5 0x00007ffff7f4c6f4 in vte::terminal::Terminal::queue_adjustment_value_changed(double) () at /lib64/libvte-2.91.so.0
#6 0x00007ffff7f4fa63 in vte::terminal::Terminal::set_scrollback_lines(long) () at /lib64/libvte-2.91.so.0
#7 0x00007ffff7f4fc0c in vte::terminal::Terminal::set_size(long, long) () at /lib64/libvte-2.91.so.0
#8 0x00007ffff7f58518 in vte_terminal_size_allocate(_GtkWidget*, _cairo_rectangle_int*) () at /lib64/libvte-2.91.so.0
#9 0x00007ffff7d0ad58 in g_closure_invoke () at /lib64/libgobject-2.0.so.0
#10 0x00007ffff7d33f9a in signal_emit_unlocked_R.isra.0 () at /lib64/libgobject-2.0.so.0
#11 0x00007ffff7d27f02 in g_signal_emit_valist () at /lib64/libgobject-2.0.so.0
#12 0x00007ffff7d28123 in g_signal_emit () at /lib64/libgobject-2.0.so.0
#13 0x00007ffff776b882 in gtk_widget_size_allocate_with_baseline () at /lib64/libgtk-3.so.0
#14 0x00007ffff75d6685 in gtk_grid_allocate () at /lib64/libgtk-3.so.0
#15 0x00007ffff754a388 in gtk_css_gadget_allocate () at /lib64/libgtk-3.so.0
#16 0x00007ffff75d38c8 in gtk_grid_size_allocate () at /lib64/libgtk-3.so.0
#17 0x00007ffff776b4b9 in gtk_widget_size_allocate_with_baseline () at /lib64/libgtk-3.so.0
#18 0x00007ffff778950b in gtk_window_size_allocate.lto_priv () at /lib64/libgtk-3.so.0
#19 0x00007ffff7d0ae2a in g_closure_invoke () at /lib64/libgobject-2.0.so.0
#20 0x00007ffff7d33f9a in signal_emit_unlocked_R.isra.0 () at /lib64/libgobject-2.0.so.0
#21 0x00007ffff7d27f02 in g_signal_emit_valist () at /lib64/libgobject-2.0.so.0
#22 0x00007ffff7d28123 in g_signal_emit () at /lib64/libgobject-2.0.so.0
#23 0x00007ffff776b882 in gtk_widget_size_allocate_with_baseline () at /lib64/libgtk-3.so.0
#24 0x00007ffff778a85f in gtk_window_move_resize () at /lib64/libgtk-3.so.0
#25 0x00007ffff7d28000 in g_signal_emit_valist () at /lib64/libgobject-2.0.so.0
#26 0x00007ffff7d28123 in g_signal_emit () at /lib64/libgobject-2.0.so.0
#27 0x00007ffff753f7d8 in gtk_container_idle_sizer () at /lib64/libgtk-3.so.0
#28 0x00007ffff7d28000 in g_signal_emit_valist () at /lib64/libgobject-2.0.so.0
#29 0x00007ffff7d28123 in g_signal_emit () at /lib64/libgobject-2.0.so.0
#30 0x00007ffff7301dd6 in gdk_frame_clock_paint_idle () at /lib64/libgdk-3.so.0
#31 0x00007ffff72ee2fd in gdk_threads_dispatch () at /lib64/libgdk-3.so.0
#32 0x00007ffff7c19171 in g_timeout_dispatch () at /lib64/libglib-2.0.so.0
#33 0x00007ffff7c18a9f in g_main_context_dispatch () at /lib64/libglib-2.0.so.0
#34 0x00007ffff7c6aa98 in g_main_context_iterate.constprop () at /lib64/libglib-2.0.so.0
#35 0x00007ffff7c15e73 in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#36 0x00007ffff7e2cdfd in g_application_run () at /lib64/libgio-2.0.so.0
#37 0x000055555555db35 in main ()