widget: a11y: Remove assert

This assert is getting hit more frequently now, e.g. by #340.
Replace it with an if branch.

Fixes: https://gitlab.gnome.org/GNOME/vte/-/issues/340